# ai-dev-environment

./: .env.example  .gitignore  .gitmodules  README.md  checklist-copy-for-referrence.md  checklist.md  database_config.py  development_guidance.md  llm_config.py  new_terminal_file.txt  ollama_integration.py  progress.md  projectBrief.md  projectBrief_expanded.md  proposed_detailed_plan.md  pyproject.toml  requirements.txt  setup_plan.md  terminal_access_plan.md  test_brave_search.py  test_langgraph.py
ai_dev_env_project/: manage.py
ai_dev_env_project/ai_dev_env_project/: asgi.py  settings.py  urls.py  wsgi.py
memory-bank/: activeContext.md  checklist.md  decisionLog.md  implementation_plan.md  productContext.md  progress.md  systemPatterns.md
